# sensing-garden-backend

./: .env.local.example  .gitignore  .windsurfrules  CHANGELOG.md  CSV_EXPORT_README.md  Dockerfile.local-setup  LOCAL_DEVELOPMENT.md  LOCAL_TESTING_GUIDE.md  Makefile  README.md  TESTING.md  UNIFIED_TESTING.md  api_config.py  api_config.template.py  check_tests.sh  docker-compose.yml  endpoints.py  get_endpoints.py  interactive_test.py  model_endpoints.py  post_endpoints.py  pyproject.toml  pytest.ini  read_endpoints.py  requirements-dev.txt  run_local.py  run_tests.sh  setup_local.py  terraform_sync.sh  test_api.py  test_break_lambda.py  test_confidence_arrays.py  test_confidence_arrays_flexible.py  test_get_api.py  test_local_config.py  test_model_api.py  test_post_api.py  test_regression_demo.py  verify_local_safety.py  verify_local_setup.sh
.github/workflows/: test.yml
common/: api-schema.json  db-schema.json  schema.json
dashboard/: Dockerfile  README.md  app.py  get_endpoints.py  populate_sample_data.py  pyproject.toml  requirements.txt
dashboard/templates/: base.html  classifications.html  detections.html  device_classifications.html  device_detections.html  index.html  item_detail.html  models.html  table.html
lambda/src/: activity.py  auth.py  csv_utils.py  dynamodb.py  handler.py  s3.py  schema.json  schemas.py  utils.py
lambda/src/routes/: admin.py  classifications.py  deployments.py  detections.py  devices.py  environment.py  export.py  heartbeats.py  models.py  registration.py  tracks.py  uploads.py  videos.py
scripts/: build_lambda.sh  composite_cli.sh
sensing-garden-client/: CHANGELOG.md  README.md  pyproject.toml
sensing-garden-client/examples/: new_client_usage.py
sensing-garden-client/sensing_garden_client/: get_endpoints.py  model_endpoints.py
sensing_garden_client/: CHANGELOG.md  README.md  pyproject.toml
sensing_garden_client/examples/: new_client_usage.py
sensing_garden_client/sensing_garden_client/: videos.py
terraform/: api_gateway.tf  dashboard.tf  dns.tf  dynamodb.tf  elastic_beanstalk.tf  iam.tf  lambda.tf  main.tf  outputs.tf  quicksight.tf  s3.tf  terraform_sync.sh  tfplan-environment-data
terraform-dashboard/: main.tf
tests/: CSV_TDD_TESTS_SUMMARY.md  README_CSV_INTEGRATION_TESTS.md  __init__.py  conftest.py  test_activity.py  test_classifications.py  test_composite_cli.py  test_composite_repair.py  test_csv_advanced_scenarios_tdd.py  test_csv_export_integration_real.py  test_csv_export_tdd.py  test_csv_handlers.py  test_csv_utils.py  test_detections.py  test_devices_table_autopopulate.py  test_dynamodb.py  test_dynamodb_deployments.py  test_get_api.py  test_handler.py  test_handler_routes_and_auth.py  test_integration.py  test_integration_deletion.py  test_model_deletion.py  test_models.py  test_multipart_upload.py  test_post_api.py  test_s3_multipart_upload.py  test_trigger_logging.py  test_utils.py  test_video_api.py  test_videos.py
trigger/src/: activity.py  composite_cli.py  composite_repair.py  composites.py  local_parse_check.py  requirements.txt  schemas.py  trigger_handler.py
