[tool.poetry]
name = "sensing-garden-backend"
version = "0.1.0"
description = "Backend services for Sensing Garden platform"
authors = ["Sensing Garden Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.0"
python-dotenv = "^0.20.0"
pillow = "^9.1.0"

[tool.poetry.group.dev.dependencies]
# Use local package in development mode
boto3 = "^1.37.34"
botocore = "^1.37.34"
pytest = "^8.3.5"
pytest-cov = "^4.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
