[tool.poetry]
name = "sensing-garden-dashboard"
version = "0.1.0"
description = "Dashboard for Sensing Garden Backend"
authors = ["Sensing Garden Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
boto3 = "^1.37.7"
python-dotenv = "^1.0.0"
json-schema-for-humans = "^0.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
